update dockerfile for render deployment

--- a/ChefBackend/Dockerfile
+++ b/ChefBackend/Dockerfile
@@ -6,8 +6,18 @@ RUN dotnet restore
 COPY . .
 RUN dotnet publish -c Release -o /publish
 
-# runing stage
+# running stage
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
+
+# Set environment variables for Render
+ENV ASPNETCORE_URLS=http://+:${PORT}
+ENV ASPNETCORE_ENVIRONMENT=Production
+
+# Copy published files
 COPY --from=build /publish .
+
+# Expose port (Render will handle port mapping)
+EXPOSE ${PORT}
+
 ENTRYPOINT ["dotnet", "ChefBackend.dll"]
