--- a/ChefBackend/.gitignore
+++ b/ChefBackend/.gitignore
@@ -2,7 +2,5 @@
 [Oo]bj/
 .env
 
-# Exclude uploaded images but keep the uploads folder structure
-wwwroot/uploads/*
-!wwwroot/uploads/.gitkeep
+# Images are now stored in Cloudinary, no need for local uploads folder
 
