--- a/ChefFrontend/package.json
+++ b/ChefFrontend/package.json
@@ -14,6 +14,7 @@
     "@huggingface/inference": "^3.6.2",
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.8.4",
+    "openai": "^5.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
