modify homepage bug

--- a/ChefFrontend/Dockerfile
+++ b/ChefFrontend/Dockerfile
@@ -13,8 +13,13 @@ RUN npm install
 # Copy the rest of the application code
 COPY . .
 
-#ARG VITE_APT_BASE_URL
-#ARG VITE_APT_BASE_URL=$VITE_APT_BASE_URL
+# Define build arguments for environment variables
+ARG VITE_GOOGLE_CLIENT_ID
+ARG VITE_API_URL
+
+# Set environment variables for build
+ENV VITE_GOOGLE_CLIENT_ID=$VITE_GOOGLE_CLIENT_ID
+ENV VITE_API_URL=$VITE_API_URL
 
 # Build the application
 RUN npm run build
