update deploy workflow and config

--- a/ChefBackend/Dockerfile
+++ b/ChefBackend/Dockerfile
@@ -10,14 +10,11 @@ RUN dotnet publish -c Release -o /publish
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 WORKDIR /app
 
-# Set environment variables for Render
-ENV ASPNETCORE_URLS=http://+:${PORT}
+ENV ASPNETCORE_URLS=http://+:8080
 ENV ASPNETCORE_ENVIRONMENT=Production
 
-# Copy published files
 COPY --from=build /publish .
 
-# Expose port (Render will handle port mapping)
-EXPOSE ${PORT}
+EXPOSE 8080
 
 ENTRYPOINT ["dotnet", "ChefBackend.dll"]
