--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,75 @@
-name: Deploy Backend to Render
+name: CI/CD Deploy to EC2 with Docker Compose
 
-# Trigger this workflow only when code changes are pushed to the main branch
-# and those changes are within the ChefBackend folder.
 on:
   push:
     branches: [ main ]
     paths:
       - 'ChefBackend/**'
+      - 'ChefFrontend/**'
+      - 'docker-compose.yml'
+      - 'docker-compose.prod.yml'
+      - '.github/workflows/deploy.yml'
 
 jobs:
-  deploy-backend:
+  detect-changes:
     runs-on: ubuntu-latest
-
+    outputs:
+      frontend_changed: ${{ steps.filter.outputs.frontend }}
+      backend_changed: ${{ steps.filter.outputs.backend }}
     steps:
-      - name: Trigger Render Deploy
-        run: |
-          curl -X POST https://api.render.com/deploy/srv-d1kajtje5dus73e9sc6g \
-          -H 'Authorization: Bearer ${{ secrets.RENDER_API_KEY }}'
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Filter changes
+        id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            frontend:
+              - 'ChefFrontend/**'
+            backend:
+              - 'ChefBackend/**'
+
+  build-push-backend:
+    runs-on: ubuntu-latest
+    needs: detect-changes
+    if: needs.detect-changes.outputs.backend_changed == 'true'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Login to Docker Hub
+        run: docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_PASSWORD }}"
+      - name: Build backend Docker image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/chef-backend:latest ./ChefBackend
+      - name: Push backend image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/chef-backend:latest
+
+  build-push-frontend:
+    runs-on: ubuntu-latest
+    needs: detect-changes
+    if: needs.detect-changes.outputs.frontend_changed == 'true'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Login to Docker Hub
+        run: docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_PASSWORD }}"
+      - name: Build frontend Docker image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/chef-frontend:latest ./ChefFrontend
+      - name: Push frontend image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/chef-frontend:latest
+
+  deploy-ec2:
+    runs-on: ubuntu-latest
+    needs: [build-push-backend, build-push-frontend, detect-changes]
+    if: needs.detect-changes.outputs.backend_changed == 'true' || needs.detect-changes.outputs.frontend_changed == 'true'
+    steps:
+      - name: Deploy on EC2 with docker-compose.prod.yml
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            cd /home/ec2-user
+            docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" -p "${{ secrets.DOCKERHUB_PASSWORD }}"
+            docker-compose -f docker-compose.prod.yml pull
+            docker-compose -f docker-compose.prod.yml up -d
