--- a/ChefFrontend/Dockerfile
+++ b/ChefFrontend/Dockerfile
@@ -33,7 +33,7 @@ COPY --from=builder /app/dist /usr/share/nginx/html
 COPY  nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose port 80
-#EXPOSE 80
+EXPOSE 80
 
 # Start nginx server
 CMD ["nginx", "-g", "daemon off;"]
