modify nginx config

--- a/ChefFrontend/nginx.conf
+++ b/ChefFrontend/nginx.conf
@@ -1,20 +1,69 @@
 server {
-    listen 80;  
-   
+    listen 80;
+
+    # Serve static files and support SPA history routing
     location / {
         root /usr/share/nginx/html;
         index index.html;
-        try_files $uri /index.html;
-
-        error_page 404 /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    location /recipe/ {
-    proxy_pass http://backend:8080/recipe/;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
-    proxy_set_header Host $host;
-    proxy_cache_bypass $http_upgrade;
-  }
+    # Proxy all backend API endpoints to the backend container
+    location /recipes/ {
+        proxy_pass http://backend:8080/recipes/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+    location /user/ {
+        proxy_pass http://backend:8080/user/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+    location /auth/ {
+        proxy_pass http://backend:8080/auth/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+    location /votes/ {
+        proxy_pass http://backend:8080/votes/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+    location /favorites/ {
+        proxy_pass http://backend:8080/favorites/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+    location /ai/ {
+        proxy_pass http://backend:8080/ai/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+    location /myrecipe/ {
+        proxy_pass http://backend:8080/myrecipe/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+    # Add more API proxy rules here if needed
 }
