modify frontend dockerfile bug

--- a/ChefFrontend/Dockerfile
+++ b/ChefFrontend/Dockerfile
@@ -10,16 +10,8 @@ COPY package*.json ./
 # Install dependencies
 RUN npm install
 
-# Copy the rest of the application code
+# Copy all code and .env file
 COPY . .
-
-# Define build arguments for environment variables
-ARG VITE_GOOGLE_CLIENT_ID
-ARG VITE_API_URL
-
-# Set environment variables for build
-ENV VITE_GOOGLE_CLIENT_ID=$VITE_GOOGLE_CLIENT_ID
-ENV VITE_API_URL=$VITE_API_URL
 
 # Build the application
 RUN npm run build
